<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="Home"
        android:id="@+id/home_activity"
        android:icon="@drawable/nav_home_symbol_black"/>
    <item
        android:title="Create"
        android:id="@+id/create_activity"
        android:icon="@drawable/nav_create_symbol_black"/>

</menu>