<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/organizer_navigation_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/organizer_create_page_scroll"
        android:layout_width="match_parent"
...
                android:layout_height="wrap_content"
                android:text="Create New Event"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <include
                android:id="@+id/event_creation_input_layout"
                layout="@layout/activity_event_page_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/confirm_create_event"
...
