...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:id="@+id/event_content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="Event Title"
                android:textSize="17sp"
                android:textStyle="bold" />
...
                android:layout_height="wrap_content"
                android:paddingBottom="7dp"
                android:text="$0"
                android:textSize="15sp" />

            <Button
                android:id="@+id/event_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:backgroundTint="#2b7ae4"
                android:clickable="false"
                android:focusable="false"
...
